[tool.poetry]
name = "hexlet-flask-example"
version = "0.1.0"
description = ""
authors = ["Anton Tyurin <AntonTyurin87@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_flask_example"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
